--- a/css/common.css
+++ b/css/common.css
@@ -82,7 +82,6 @@ li {
   position: fixed;
   right: 2%;
   bottom: 5%;
-  z-index: 10;
 }
 
 hr {
@@ -333,12 +332,10 @@ header .frame {
   height: 100%;
   z-index: 10;
   background-color: #212529;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .full-wrap .article-box.pf-main .intro-text-wrap {
   color: #fff;
+  padding-top: 24rem;
 }
 .full-wrap .article-box.pf-main .waves {
   bottom: 0;
