main 문구 위치 수정

--- a/css/common.css
+++ b/css/common.css
@@ -909,6 +909,9 @@ footer {
   .verticle-line {
     display: none;
   }
+  .full-wrap .article-box.pf-main .intro-text-wrap {
+    padding-top: 20rem;
+  }
   .full-wrap .article-box.pf-intro {
     width: 90%;
     padding: 3rem 0;
