--- a/css/common.scss
+++ b/css/common.scss
@@ -817,6 +817,7 @@ footer {
         background-color: #fff;
         width: 0;
         right: 0;
+        top: 0;
         z-index: 50;
         overflow: hidden;
         background-color: rgba(0, 0, 0, 0.8);
