--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,10 @@
 /*1024px 이상, 1680 이하*/
 /*변수파일 import*/
 @import url("https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Black+Han+Sans&family=Do+Hyeon&family=Dongle&family=Gothic+A1&family=Gowun+Dodum&family=IBM+Plex+Sans+KR&family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&family=Stylish&family=Sunflower:wght@500&display=swap");
+:root {
+  --item-color: #212529;
+}
+
 html,
 body {
   width: 100%;
@@ -158,10 +162,21 @@ header .frame {
   background-color: white;
   border: 0;
   z-index: 51;
+  overflow: visible;
 }
 .progress .bar {
-  background-color: #212529;
+  background-color: var(--item-color);
   height: 2px;
+  transition: 0.2s;
+}
+.progress .circle {
+  background-color: var(--item-color);
+  width: 6px;
+  height: 6px;
+  position: absolute;
+  top: -50%;
+  border-radius: 50%;
+  transform: translateY(-1px);
   transition: 0.2s;
 }
 
@@ -335,7 +350,7 @@ header .frame {
   width: 100%;
   height: 100%;
   z-index: 10;
-  background-color: #212529;
+  background-color: var(--item-color);
 }
 .full-wrap .article-box.pf-main .intro-text-wrap {
   color: #fff;
@@ -363,7 +378,7 @@ header .frame {
   margin: 0 auto;
 }
 .full-wrap .article-box.pf-intro .main-intro-list .main-intro-item:hover .main-intro-title {
-  color: #212529;
+  color: var(--item-color);
 }
 .full-wrap .article-box.pf-intro .main-intro-list .main-intro-item:hover .main-intro-number {
   color: #fff;
@@ -379,7 +394,7 @@ header .frame {
 .full-wrap .article-box.pf-intro .main-intro-list .main-intro-item .main-intro-number {
   font-size: 4.5rem;
   font-weight: bold;
-  text-shadow: -1px -1px 0 #212529, 1px -1px 0 #212529, -1px 1px 0 #212529, 1px 1px 0 #212529;
+  text-shadow: -1px -1px 0 var(--item-color), 1px -1px 0 var(--item-color), -1px 1px 0 var(--item-color), 1px 1px 0 var(--item-color);
   position: absolute;
   top: -45px;
   left: -35px;
@@ -392,7 +407,7 @@ header .frame {
   display: block;
   font-weight: bold;
   color: #fff;
-  text-shadow: -1px -1px 0 #212529, 1px -1px 0 #212529, -1px 1px 0 #212529, 1px 1px 0 #212529;
+  text-shadow: -1px -1px 0 var(--item-color), 1px -1px 0 var(--item-color), -1px 1px 0 var(--item-color), 1px 1px 0 var(--item-color);
   transition: all 0.2s;
 }
 .full-wrap .article-box.pf-aboutme {
@@ -435,9 +450,9 @@ header .frame {
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .skills-wrap .skill-elem:hover,
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .license .skills-wrap .skill-elem:hover,
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .education .skills-wrap .skill-elem:hover {
-  filter: drop-shadow(5px 5px 5px #212529);
+  filter: drop-shadow(5px 5px 5px var(--item-color));
   transition: 0.2s;
-  text-shadow: -1px -1px 0 #212529, 1px -1px 0 #212529, -1px 1px 0 #212529, 1px 1px 0 #212529;
+  text-shadow: -1px -1px 0 var(--item-color), 1px -1px 0 var(--item-color), -1px 1px 0 var(--item-color), 1px 1px 0 var(--item-color);
   color: white;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .get-date,
@@ -460,7 +475,7 @@ header .frame {
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .tag {
   border: 1px solid #8f8f8f;
   border-radius: 5px;
-  color: #212529;
+  color: var(--item-color);
   font-size: 1.2rem;
   margin-right: 1rem;
   width: 7rem;
@@ -570,7 +585,7 @@ header .frame {
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .active,
 .full-wrap .article-box.pf-exprience .exprience-detail .accordion:hover {
-  color: #212529;
+  color: var(--item-color);
   font-weight: bold;
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .accordion:before {
@@ -594,21 +609,21 @@ header .frame {
   margin-bottom: 4rem !important;
   font-weight: bold;
   font-size: 8rem;
-  text-shadow: -1px -1px 0 #212529, 1px -1px 0 #212529, -1px 1px 0 #212529, 1px 1px 0 #212529;
+  text-shadow: -1px -1px 0 var(--item-color), 1px -1px 0 var(--item-color), -1px 1px 0 var(--item-color), 1px 1px 0 var(--item-color);
 }
 .full-wrap .article-box .article-title span {
   font-size: 2rem;
   font-weight: normal;
 }
 .full-wrap .article-box .article-title:hover {
-  color: #212529;
+  color: var(--item-color);
   transition: all 0.4s;
-  text-shadow: 3px 3px 7px #212529;
+  text-shadow: 3px 3px 7px var(--item-color);
 }
 
 footer {
   height: 10rem;
-  background: #212529;
+  background: var(--item-color);
 }
 
 @media (min-width: 1024px) and (max-width: 1679px) {
@@ -670,7 +685,7 @@ footer {
     transform: rotate(3deg);
     z-index: 9;
     opacity: 0.5;
-    background: #212529;
+    background: var(--item-color);
   }
   .full-wrap .article-box.pf-aboutme .aboutme-wrap .mobile-photo .id-photo {
     position: relative;
@@ -975,7 +990,7 @@ footer {
     transform: rotate(3deg);
     z-index: 9;
     opacity: 0.5;
-    background: #212529;
+    background: var(--item-color);
   }
   .full-wrap .article-box.pf-aboutme .aboutme-wrap .mobile-photo .id-photo {
     position: relative;
