--- a/css/common.scss
+++ b/css/common.scss
@@ -2,6 +2,10 @@
 /*변수파일 import*/
 @import url('https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Black+Han+Sans&family=Do+Hyeon&family=Dongle&family=Gothic+A1&family=Gowun+Dodum&family=IBM+Plex+Sans+KR&family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&family=Stylish&family=Sunflower:wght@500&display=swap');
 
+:root {
+    --item-color: #212529;
+}
+
 html,
 body {
     width: 100%;
@@ -150,11 +154,23 @@ header {
     background-color: white;
     border: 0;
     z-index: 51;
+    overflow: visible;
 
     .bar {
-        background-color: #212529;
+        background-color: var(--item-color);
         height: 2px;
         transition: .2s;
+    }
+
+    .circle {
+        background-color: var(--item-color);
+        width: 6px;
+        height: 6px;
+        position: absolute;
+        top: -50%;
+        border-radius: 50%;
+        transform: translateY(-1px);
+        transition: 0.2s;
     }
 }
 
@@ -254,7 +270,7 @@ header {
             width: 100%;
             height: 100%;
             z-index: 10;
-            background-color: #212529;
+            background-color: var(--item-color);
             // display: flex;
             // align-items: center;
             // justify-content: center;
@@ -289,7 +305,7 @@ header {
 
                     &:hover {
                         .main-intro-title {
-                            color: #212529;
+                            color: var(--item-color);
                         }
 
                         .main-intro-number {
@@ -310,7 +326,7 @@ header {
                     .main-intro-number {
                         font-size: 4.5rem;
                         font-weight: bold;
-                        text-shadow: -1px -1px 0 #212529, 1px -1px 0 #212529, -1px 1px 0 #212529, 1px 1px 0 #212529;
+                        text-shadow: -1px -1px 0 var(--item-color), 1px -1px 0 var(--item-color), -1px 1px 0 var(--item-color), 1px 1px 0 var(--item-color);
                         position: absolute;
                         top: -45px;
                         left: -35px;
@@ -324,7 +340,7 @@ header {
                         display: block;
                         font-weight: bold;
                         color: #fff;
-                        text-shadow: -1px -1px 0 #212529, 1px -1px 0 #212529, -1px 1px 0 #212529, 1px 1px 0 #212529;
+                        text-shadow: -1px -1px 0 var(--item-color), 1px -1px 0 var(--item-color), -1px 1px 0 var(--item-color), 1px 1px 0 var(--item-color);
                         transition: all .2s;
                     }
                 }
@@ -370,9 +386,9 @@ header {
                                 }
 
                                 &:hover {
-                                    filter: drop-shadow(5px 5px 5px #212529);
+                                    filter: drop-shadow(5px 5px 5px var(--item-color));
                                     transition: 0.2s;
-                                    text-shadow: -1px -1px 0 #212529, 1px -1px 0 #212529, -1px 1px 0 #212529, 1px 1px 0 #212529;
+                                    text-shadow: -1px -1px 0 var(--item-color), 1px -1px 0 var(--item-color), -1px 1px 0 var(--item-color), 1px 1px 0 var(--item-color);
                                     color: white;
                                 }
                             }
@@ -395,7 +411,7 @@ header {
                     .tag {
                         border: 1px solid #8f8f8f;
                         border-radius: 5px;
-                        color: #212529;
+                        color: var(--item-color);
                         font-size: 1.2rem;
                         margin-right: 1rem;
                         width: 7rem;
@@ -535,7 +551,7 @@ header {
 
                 .active,
                 .accordion:hover {
-                    color: #212529;
+                    color: var(--item-color);
                     font-weight: bold;
                 }
 
@@ -568,7 +584,7 @@ header {
             margin-bottom: 4rem !important;
             font-weight: bold;
             font-size: 8rem;
-            text-shadow: -1px -1px 0 #212529, 1px -1px 0 #212529, -1px 1px 0 #212529, 1px 1px 0 #212529;
+            text-shadow: -1px -1px 0 var(--item-color), 1px -1px 0 var(--item-color), -1px 1px 0 var(--item-color), 1px 1px 0 var(--item-color);
 
             span {
                 font-size: 2rem;
@@ -576,9 +592,9 @@ header {
             }
 
             &:hover {
-                color: #212529;
+                color: var(--item-color);
                 transition: all .4s;
-                text-shadow: 3px 3px 7px #212529;
+                text-shadow: 3px 3px 7px var(--item-color);
             }
         }
     }
@@ -586,7 +602,7 @@ header {
 
 footer {
     height: 10rem;
-    background: #212529;
+    background: var(--item-color);
 }
 
 // 데스크탑
@@ -668,7 +684,7 @@ footer {
                             transform: rotate(3deg);
                             z-index: 9;
                             opacity: 0.5;
-                            background: #212529;
+                            background: var(--item-color);
                         }
 
                         .id-photo {
@@ -965,7 +981,7 @@ footer {
                             transform: rotate(3deg);
                             z-index: 9;
                             opacity: 0.5;
-                            background: #212529;
+                            background: var(--item-color);
                         }
 
                         .id-photo {
